edited pads and styled that

--- a/components/layout/Dialpad.module.css
+++ b/components/layout/Dialpad.module.css
@@ -1,12 +1,25 @@
-.fab {
-  aspect-ratio: 1/1;
-  position: fixed;
-  bottom: 15%;
-  right: 5%;
-  z-index: 1200;
-}
+ .fab {
+   aspect-ratio: 1/1;
+   position: fixed;
+   bottom: 15%;
+   right: 5%;
+   z-index: 1200;
+ }
 
-.dialpad {
-  background: red;
-  height: 300px;
-}
+ .form {
+   margin-right: .5rem;
+   width: 100%;
+ }
+
+ .input {
+   border: none;
+   border-radius: 0;
+   background: #ddd;
+ }
+
+ .pads {
+   margin-top: 1rem;
+   margin-bottom: 0;
+   height: 46vh;
+   background-color: #ddd;
+ }
