--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,24 @@
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+/* * module.css kullandığım için bunları burada yazdım ! */
+/* custom offcanvas */
+.dial-canvas {
+  padding: 1rem;
+  padding-bottom: 0;
+  position: fixed;
+  bottom: 0%;
+  z-index: 1250;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 100%;
+  visibility: hidden;
+  background: #fff;
+  background-clip: padding-box;
+  outline: 0;
+  height: 60vh;
+  transition: transform .3s ease-in;
+  box-shadow: #ddd 3px -1px 10px 5px;
+}
