extracted component and state

--- a/components/layout/Pads.module.css
+++ b/components/layout/Pads.module.css
@@ -31,16 +31,5 @@
    width: 100%;
    margin-bottom: 1rem;
    font-size: 1.5rem;
- }
-
- .pad-call-btn {
-   width: 50%;
-   display: flex;
-   align-self: center;
-   align-items: center;
-   justify-content: space-evenly;
- }
-
- .call {
-   z-index: 1300;
+   padding: .5rem;
  }
