--- a/components/layout/Pads.module.css
+++ b/components/layout/Pads.module.css
@@ -6,6 +6,10 @@
    z-index: 1000;
  }
 
+ .search-results {
+   margin: 0;
+ }
+
  .offheader {
    margin: 0;
    padding-top: 1rem;
@@ -20,16 +24,4 @@
  .pads {
    display: flex;
    flex-direction: column;
- }
-
- .col {
-   padding: 0 .3rem;
- }
-
- .pad-btn,
- .pad-call-btn {
-   width: 100%;
-   margin-bottom: 1rem;
-   font-size: 1.5rem;
-   padding: .5rem;
  }
