--- a/components/layout/Pads.module.css
+++ b/components/layout/Pads.module.css
@@ -7,7 +7,12 @@
  }
 
  .search-results {
-   margin: 0;
+   margin: 1rem 1.25rem;
+ }
+
+ .search-results li {
+   list-style: none;
+   font-size: 1.25rem;
  }
 
  .offheader {
