edited and prettied added husky config

--- a/components/layout/Search.module.css
+++ b/components/layout/Search.module.css
@@ -13,8 +13,9 @@
   width: auto;
   max-width: 100%;
   background-color: #ddd;
-  height: 150px;
+  z-index: 10000;
   display: none;
+  overflow: hidden;
 }
 
 .search-result {
