--- a/components/layout/Pad.module.css
+++ b/components/layout/Pad.module.css
@@ -1,10 +1,10 @@
 .col {
-  padding: 0 .3rem;
+  padding: 0 0.3rem;
 }
 
 .pad-btn {
   width: 100%;
   margin-bottom: 1rem;
   font-size: 1.5rem;
-  padding: .5rem;
+  padding: 0.5rem;
 }
