--- a/pages/rehber/index.module.css
+++ b/pages/rehber/index.module.css
@@ -6,8 +6,8 @@
 
 .kisi-container {
   display: flex;
-  margin: .5rem 1rem;
-  padding: .5rem;
+  margin: 0.5rem 1rem;
+  padding: 0.5rem;
   align-items: center;
 }
 
@@ -17,7 +17,7 @@
 
 .kisi-container .avatar {
   margin-right: 1rem;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   font-size: 1rem;
   width: 10%;
   aspect-ratio: 1/1;
@@ -28,7 +28,7 @@
 
 .eklebtn {
   width: 35%;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   align-self: center;
   border: none;
   background: none;
