--- a/components/layout/Search.module.css
+++ b/components/layout/Search.module.css
@@ -7,15 +7,12 @@
 }
 
 .search-results {
-  margin: 0 1rem;
-  margin-left: 2.5rem;
-  padding: .5rem;
-  width: auto;
+  padding: 0.5rem;
+  width: 100%;
+  height: 40vh;
   max-width: 100%;
-  background-color: #ddd;
-  z-index: 10000;
   display: none;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .search-result {
@@ -27,13 +24,13 @@
   display: flex;
   align-items: center;
   margin-top: 1rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   margin-left: 1rem;
   margin-right: 1rem;
 }
 
 .form svg {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .form input {
