--- a/components/kisiler/KisiKart.module.css
+++ b/components/kisiler/KisiKart.module.css
@@ -1,7 +1,7 @@
 .kisi-container {
   display: flex;
-  margin: .5rem 1rem;
-  padding: .5rem;
+  margin: 0.5rem 1rem;
+  padding: 0.5rem;
   align-items: center;
   z-index: 1500;
 }
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   margin-right: 1rem;
-  font-size: .8rem;
+  font-size: 1rem;
   width: 10%;
   aspect-ratio: 1/1;
   border-radius: 50%;
