--- a/styles/scss/modules/kisiler/KisiSecenek.module.scss
+++ b/styles/scss/modules/kisiler/KisiSecenek.module.scss
@@ -4,6 +4,10 @@ $border: none;
 $blue: #0d6efd;
 
 .settings {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
   button {
     border: $border;
 
