--- a/styles/scss/custom.scss
+++ b/styles/scss/custom.scss
@@ -1,29 +1,19 @@
 /* //* boostrap overrides */
 
 // Required
-@import "../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Default variable overrides for offcanvas
 $offcanvas-vertical-height: 70vh;
-$zindex-offcanvas: 1250;
 
 // Required
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/maps";
-@import "../node_modules/bootstrap/scss/mixins";
-@import "../node_modules/bootstrap/scss/root";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/maps";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/root";
 
 // Optional Bootstrap components here
-@import "../node_modules/bootstrap/scss/reboot";
-@import "../node_modules/bootstrap/scss/type";
-@import "../node_modules/bootstrap/scss/offcanvas";
+@import "../../node_modules/bootstrap/scss/reboot";
+@import "../../node_modules/bootstrap/scss/type";
+@import "../../node_modules/bootstrap/scss/offcanvas";
 // etc
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-a:hover {
-  color: black;
-}
