--- a/styles/scss/modules/kisiler/KisiKart.module.scss
+++ b/styles/scss/modules/kisiler/KisiKart.module.scss
@@ -20,7 +20,6 @@ $border: none;
   margin: 0.5rem 1rem;
   padding: 0.5rem;
   align-items: center;
-  z-index: 1500;
 
   &:hover {
     background: #f1f1f1;
@@ -139,5 +138,18 @@ $border: none;
   .message:hover,
   .message:focus {
     border: $border;
+  }
+}
+
+.delete {
+  display: flex;
+  justify-content: center;
+
+  button {
+    width: 30%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.25rem;
   }
 }
