--- a/styles/scss/modules/pages/kisiler/index.module.scss
+++ b/styles/scss/modules/pages/kisiler/index.module.scss
@@ -1,3 +1,5 @@
+$blue: #0d6efd;
+
 .container {
   max-width: 100%;
   display: flex;
@@ -10,15 +12,18 @@
   align-self: center;
   border: none;
   background: none;
-  color: var(--bs-blue);
+  color: $blue;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: none;
 
   &:hover,
   &:active,
   &:focus {
     background: none;
-    color: var(--bs-blue);
+    color: $blue;
+    border: none;
+    box-shadow: none;
   }
 }
