--- a/styles/scss/modules/kisiler/KisiDuzenle.module.scss
+++ b/styles/scss/modules/kisiler/KisiDuzenle.module.scss
@@ -1,22 +1,10 @@
-$blue: #0d6efd;
+@import '../../variables';
 
 .off-body {
   display: flex;
   align-items: center;
   flex-direction: column;
   row-gap: 1.5rem;
-
-  .avatar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    width: 15%;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    text-align: center;
-    background: $blue;
-  }
 
   .form {
     svg {
