--- a/styles/scss/modules/kisiler/KisiKart.module.css
+++ b/styles/scss/modules/kisiler/KisiKart.module.css
@@ -18,19 +18,6 @@
   background: #f1f1f1;
 }
 
-.avatar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 1rem;
-  font-size: 1rem;
-  width: 10%;
-  aspect-ratio: 1/1;
-  border-radius: 50%;
-  text-align: center;
-  background: #0d6efd;
-}
-
 /* offcanvas styling */
 .header {
   display: flex;
@@ -105,24 +92,12 @@
   background: none;
   box-shadow: none;
 }
-.info-card .call,
-.info-card .message {
-  border: none;
-}
-.info-card .call:hover, .info-card .call:focus,
-.info-card .message:hover,
-.info-card .message:focus {
-  border: none;
-}
 .info-card .message {
   width: 50%;
   display: flex;
   justify-content: flex-end;
 }
-.info-card .call:hover,
-.info-card .call:focus,
-.info-card .message:hover,
-.info-card .message:focus {
+.info-card:hover, .info-card:focus {
   border: none;
 }
 
