--- a/styles/scss/modules/kisiler/KisiKart.module.scss
+++ b/styles/scss/modules/kisiler/KisiKart.module.scss
@@ -1,5 +1,4 @@
-// bootstrap primary
-$blue: #0d6efd;
+@import '../../variables';
 
 // other vars
 $border: none;
@@ -24,19 +23,6 @@ $border: none;
   &:hover {
     background: #f1f1f1;
   }
-}
-
-.avatar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 1rem;
-  font-size: 1rem;
-  width: 10%;
-  aspect-ratio: 1/1;
-  border-radius: 50%;
-  text-align: center;
-  background: $blue;
 }
 
 /* offcanvas styling */
@@ -121,26 +107,14 @@ $border: none;
   }
 
   /* info card buttons */
-  .call,
-  .message {
-    border: $border;
-
-    &:hover,
-    &:focus {
-      border: $border;
-    }
-  }
-
   .message {
     width: 50%;
     display: flex;
     justify-content: flex-end;
   }
 
-  .call:hover,
-  .call:focus,
-  .message:hover,
-  .message:focus {
+  &:hover,
+  &:focus {
     border: $border;
   }
 }
