--- a/styles/scss/modules/kisiler/KisiAvatar.module.css
+++ b/styles/scss/modules/kisiler/KisiAvatar.module.css
@@ -2,11 +2,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1rem;
+  font-size: 1.25rem;
   width: 10%;
-  margin-right: 1rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
   text-align: center;
   background: #0d6efd;
+}
+.avatar span {
+  color: #fff;
 }
