--- a/styles/scss/modules/kisiler/KisiAvatar.module.scss
+++ b/styles/scss/modules/kisiler/KisiAvatar.module.scss
@@ -4,11 +4,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1rem;
+  font-size: 1.25rem;
   width: 10%;
-  margin-right: 1rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
   text-align: center;
   background: $blue;
+
+  span {
+    color: #fff;
+  }
 }
