--- a/styles/scss/modules/kisiler/KisiDuzenle.module.scss
+++ b/styles/scss/modules/kisiler/KisiDuzenle.module.scss
@@ -6,23 +6,22 @@
   flex-direction: column;
   row-gap: 1.5rem;
 
-  .form {
+  form {
     svg {
-      margin-right: 0.5rem;
+      margin-right: .5rem;
     }
+  }
+
+  button {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
 
   .delete {
     width: 30%;
     display: flex;
     justify-content: center;
-
-    button {
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      font-size: 1.25rem;
-    }
   }
 }
