--- a/styles/scss/modules/kisiler/KisiKayit.module.css
+++ b/styles/scss/modules/kisiler/KisiKayit.module.css
@@ -5,22 +5,20 @@
   margin: 1rem;
   justify-items: space-around;
 }
-
 .kisi-container:hover {
   background: #f1f1f1;
 }
-
-.kisi-container-col {
+.kisi-container .kisi-container-col {
   padding: 1rem 0.5rem;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
 }
-.kisi-container-col .delete .delete-modal {
+.kisi-container .kisi-container-col .delete .delete-modal {
   z-index: 1251;
   top: 25%;
 }
-.kisi-container-col .delete svg {
+.kisi-container .kisi-container-col .delete svg {
   margin-right: 1rem;
 }
