--- a/styles/scss/modules/kisiler/KisiKayit.module.css
+++ b/styles/scss/modules/kisiler/KisiKayit.module.css
@@ -19,6 +19,6 @@
   z-index: 1251;
   top: 25%;
 }
-.kisi-container .kisi-container-col .delete svg {
+.kisi-container .kisi-container-col .delete i {
   margin-right: 1rem;
 }
