--- a/styles/scss/modules/layout/Search.module.scss
+++ b/styles/scss/modules/layout/Search.module.scss
@@ -13,7 +13,8 @@
     margin-left: 1rem;
     margin-right: 1rem;
 
-    svg {
+    i {
+      font-size: 20px;
       margin-right: 0.5rem;
     }
 
