--- a/styles/scss/modules/kisiler/KisiDuzenle.module.scss
+++ b/styles/scss/modules/kisiler/KisiDuzenle.module.scss
@@ -1,4 +1,4 @@
-@import '../../variables';
+@import "../../variables";
 
 .off-body {
   display: flex;
@@ -7,8 +7,9 @@
   row-gap: 1.5rem;
 
   form {
-    svg {
-      margin-right: .5rem;
+    i {
+      margin-right: 0.5rem;
+      font-size: 20px;
     }
   }
 
