--- a/styles/scss/modules/kisiler/KisiKart.module.scss
+++ b/styles/scss/modules/kisiler/KisiKart.module.scss
@@ -1,4 +1,4 @@
-@import '../../variables';
+@import "../../variables";
 
 // other vars
 $border: none;
@@ -63,6 +63,10 @@ $border: none;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+
+    i {
+      font-size: 24px;
+    }
   }
 }
 
