--- a/styles/scss/modules/kisiler/KisiKayit.module.scss
+++ b/styles/scss/modules/kisiler/KisiKayit.module.scss
@@ -11,7 +11,7 @@
   }
 
   .kisi-container-col {
-    padding: 1rem .5rem;
+    padding: 1rem 0.5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -23,7 +23,7 @@
         top: 25%;
       }
 
-      svg {
+      i {
         margin-right: 1rem;
       }
     }
