--- a/styles/scss/modules/kisiler/KisiSecenek.module.css
+++ b/styles/scss/modules/kisiler/KisiSecenek.module.css
@@ -12,7 +12,6 @@
 .settings button:nth-child(2):active {
   fill: #0d6efd;
 }
-.settings svg {
-  width: 20px;
-  aspect-ratio: 1/1;
+.settings i {
+  font-size: 20px;
 }
