--- a/styles/scss/modules/kisiler/KisiSecenek.module.scss
+++ b/styles/scss/modules/kisiler/KisiSecenek.module.scss
@@ -1,5 +1,5 @@
 // settings panel
-@import '../../variables';
+@import "../../variables";
 
 $border: none;
 
@@ -20,8 +20,7 @@ $border: none;
     }
   }
 
-  svg {
-    width: 20px;
-    aspect-ratio: 1/1;
+  i {
+    font-size: 20px;
   }
 }
