--- a/styles/scss/modules/layout/CallCanvas.module.css
+++ b/styles/scss/modules/layout/CallCanvas.module.css
@@ -12,7 +12,7 @@
   width: 70px;
   aspect-ratio: 1/1;
 }
-.off-body .call-close svg {
+.off-body .call-close i {
   font-size: 1.5rem;
   transform: rotate(135deg);
 }
