--- a/styles/scss/modules/layout/Navbar.module.css
+++ b/styles/scss/modules/layout/Navbar.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   color: black;
 }
-.navbar svg {
+.navbar i {
   width: 1.2rem;
   aspect-ratio: 1/1;
   align-self: center;
