--- a/styles/scss/modules/layout/Pads.module.scss
+++ b/styles/scss/modules/layout/Pads.module.scss
@@ -9,13 +9,15 @@
 .back {
   text-align: left;
   width: 5%;
-  padding: 0;
-  padding: 0.5rem;
   margin-left: 0.5rem;
   border: none;
 
   &:hover {
     border: none;
+  }
+
+  i {
+    font-size: 20px;
   }
 }
 
@@ -29,6 +31,10 @@
   margin: 0;
   padding-top: 1rem;
   padding-bottom: 0;
+
+  i {
+    font-size: 32px;
+  }
 
   .offinput {
     margin: 0 0.25rem;
