--- a/styles/scss/modules/layout/Search.module.css
+++ b/styles/scss/modules/layout/Search.module.css
@@ -12,7 +12,8 @@
   margin-left: 1rem;
   margin-right: 1rem;
 }
-.search .form svg {
+.search .form i {
+  font-size: 20px;
   margin-right: 0.5rem;
 }
 .search .form input {
