--- a/styles/scss/modules/pages/kisiler/index.module.css
+++ b/styles/scss/modules/pages/kisiler/index.module.css
@@ -1,3 +1,14 @@
+.kisiyok-container {
+  margin-top: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.kisiyok-container i {
+  font-size: 32px;
+}
+
 .container {
   max-width: 100%;
   display: flex;
