--- a/styles/scss/modules/pages/kisiler/index.module.scss
+++ b/styles/scss/modules/pages/kisiler/index.module.scss
@@ -1,4 +1,16 @@
-@import '../../../variables';
+@import "../../../variables";
+
+.kisiyok-container {
+  margin-top: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  i {
+    font-size: 32px;
+  }
+}
 
 .container {
   max-width: 100%;
